# ketobook

./: .env.example  .gitignore  00_START_HERE.md  API_REFERENCE.md  API_WALLET_REFERENCE.md  Cargo.toml  DOCUMENTATION_UPDATES.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  MANUAL_MIGRATION_QUICK_REFERENCE.md  MANUAL_MIGRATION_STRUCTURE.md  MIGRATIONS.md  MODELS_REFACTORING_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SCAFFOLDING_SUMMARY.md  SETUP.md  WALLET_REFACTOR_SUMMARY.md  schema.sql  test_api.ps1  test_api.sh
migrations/: 20250103_add_wallet_id_to_transactions.sql  20250105_create_debts_table.sql  20250106_create_views.sql  20250128_add_credit_limit_to_wallets.sql  20250128_create_transactions_table.sql  20250128_create_wallets_table.sql  20260101_create_all_tables.sql  20260128001_initial_schema.sql
src/: cache.rs  config.rs  db.rs  debts.rs  main.rs  models.rs  transactions.rs  wallets.rs
src/models/: debt.rs  mod.rs  transaction.rs  wallet.rs
