[package]
name = "ketobook"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenv = "0.15"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
